# hiyori

./: .env.example  .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/characters/hyori/: character.md  index.ts  persona.ts
src/components/: ChatBubble.css  ChatBubble.tsx  ChatHistory.tsx  ConfirmDialog.css  ConfirmDialog.tsx  EmotionReaction.tsx  ErrorBoundary.tsx  InputBar.tsx  Live2DViewer.css  Live2DViewer.tsx  SessionErrorOverlay.tsx  SettingsPanel.css  SettingsPanel.tsx  SpeechBubble.tsx  ToolStatusIndicator.tsx
src/hooks/: useAmbientMonitor.ts  useChatHistory.ts  useEmotionState.ts  useLive2D.ts  useSession.ts  useTTS.ts  useVoiceInput.ts  useWindowBehavior.ts
src/lib/: constants.ts  settings-window.ts  types.ts
src/lib/agent/: executor.ts  index.ts  router.ts  safety.test.ts  safety.ts  tools.test.ts  tools.ts
src/lib/db/: emotional-state.ts  index.ts  relationship.ts  user-facts.ts
src/lib/emotion/: decay.ts
src/lib/live2d/: create-live2d-stage.ts  emotion-controller.test.ts  emotion-controller.ts  exp3-engine.ts  gaze.ts  gestures.ts  idle-behavior.ts  math.test.ts  motion-patches.ts  saccade.ts  types.ts  vad-expression.test.ts  vad-expression.ts
src/lib/llm/: adapter.ts  direct-chat.ts  fact-extractor.ts  request-config.ts
src/pages/: SettingsPage.tsx
(+7 files in other folders)
