[package]
name = "hiyori"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_hiyori_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = { version = "2", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
sysinfo = "0.33"
arboard = "3"
dirs = "6"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
cocoa = "0.25"
core-foundation = "0.9"
